[gd_scene load_steps=4 format=3 uid="uid://c8h2s4jwx62xs"]

[ext_resource type="Script" uid="uid://mqqd2f0cs5my" path="res://o_cham.gd" id="1_vlfmp"]

[sub_resource type="LabelSettings" id="LabelSettings_vlfmp"]
font_size = 21

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlfmp"]
size = Vector2(48, 48)

[node name="o" type="Panel"]
script = ExtResource("1_vlfmp")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 80.0
offset_bottom = 80.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0

[node name="Marker2D" type="Marker2D" parent="Control/CenterContainer"]
position = Vector2(40, 40)

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -23.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470076, 0.470076, 0.470076, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 17.0
offset_top = 18.0
offset_right = 64.0
offset_bottom = 64.0
label_settings = SubResource("LabelSettings_vlfmp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(40, 40)
shape = SubResource("RectangleShape2D_vlfmp")

[connection signal="mouse_entered" from="Control/ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="Control/ColorRect" to="." method="_on_color_rect_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
